<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:textColor="@color/black"
        android:inputType="textCapWords"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/last_name"
        android:textColor="@color/black"
        android:inputType="textCapWords"
        app:layout_constraintTop_toBottomOf="@id/firstName"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/lastName"/>

    <EditText
        android:id="@+id/companyName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/company_name"
        android:textColor="@color/black"
        android:inputType="textCapWords"
        app:layout_constraintTop_toBottomOf="@id/email"/>

    <EditText
        android:id="@+id/dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/date_of_birth"
        android:textColor="@color/black"
        android:inputType="date"
        app:layout_constraintTop_toBottomOf="@id/companyName"/>

    <CheckBox
        android:id="@+id/isWorkingCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/is_working"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/dob"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:padding="15dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/isWorkingCheckBox">

        <TextView
            android:id="@+id/submitTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ProgressBar
            android:id="@+id/progressCircle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="gone"
            android:indeterminateTint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>